tests/ui/implicit-duplicate.stderr
error[E0080]: evaluation of constant value failed
  --> tests/ui/implicit-duplicate.rs:24:1
   |
24 | #[open_enum]
   | ^^^^^^^^^^^^ the evaluated program panicked at 'discriminant value assigned more than once', $DIR/tests/ui/implicit-duplicate.rs:24:1
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> tests/ui/implicit-duplicate.rs:31:1
   |
31 | #[open_enum]
   | ^^^^^^^^^^^^ the evaluated program panicked at 'discriminant value assigned more than once', $DIR/tests/ui/implicit-duplicate.rs:31:1
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` (in Nightly builds, run with -Z macro-backtrace for more info)
